# pymoten

./: .buildinfo  .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  README.rst  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  test_requirements.txt
.claude/: settings.local.json
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: benchmark_backends.doctree  compare_numpy_vs_gpu.doctree  index.doctree  sg_execution_times.doctree
.doctrees/autodoc/: modules.doctree  moten.backend.doctree  moten.backend.numpy.doctree  moten.backend.torch.doctree  (+10 more)
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
auto_examples/: benchmark_backends.html  compare_numpy_vs_gpu.html  index.html  sg_execution_times.html
autodoc/: modules.html  moten.backend.html  moten.backend.numpy.html  moten.backend.torch.html  moten.backend.torch_cuda.html  moten.backend.torch_mps.html  moten.colorspace.html  moten.core.html  moten.extras.html  moten.html  moten.io.html  moten.pyramids.html  moten.utils.html  moten.viz.html
benchmarks/: benchmark_backends.py  compare_numpy_vs_gpu.py
docs/: Makefile  README.md
examples/: README.rst  benchmark_backends.py  compare_numpy_vs_gpu.py  demo_numpy_vs_gpu.py
joss/: codemeta.json  paper.bib  paper.md
moten/: __init__.py  api.py  colorspace.py  core.py  core_torch.py  extras.py  io.py  moten.py  pyramids.py  readers.py  utils.py  viz.py
(+94 files in other folders)
